# lob

./: .clang-format  .clang-tidy  .codespellrc  .envrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  README.md  flake.nix
.github/workflows/: ci.yml  scorecard.yml
benchmark/: CMakeLists.txt  loblerp.cpp
cmake/: coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  folders.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  project-is-top-level.cmake  silence.cmake  spell-targets.cmake  spell.cmake  variables.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt  example_lob.cpp  lobber.cpp  lobber_bridge.cpp  lobber_bridge.hpp  lobber_cli.cpp  lobber_cli.hpp  lobber_wizard.cpp  lobber_wizard.hpp  version.hpp.in
example/tests/: compare_json.sh  property_checks.sh  run_tests.sh
example/tests/expected/: g7_with_dims.expected.json  high_angle.expected.json  minimal_fields.expected.json  with_all.expected.json  with_coriolis.expected.json  with_wind.expected.json
example/tests/fixtures/: g7_with_dims.json  high_angle.json  minimal_fields.json  minimal_g1.json  with_all.json  with_coriolis.json  with_wind.json
include/lob/: lob.h  lob.hpp
source/: boatright.cpp  boatright.hpp  calc.cpp  calc.hpp  cartesian.cpp  cartesian.hpp  constants.hpp  eng_units.cpp  eng_units.hpp  helpers.hpp  litz.cpp  litz.hpp  lob.cpp  lob_builder.cpp  lob_builder_c.cpp  lob_convert.cpp  lob_convert_c.cpp  lob_solve.cpp  lob_solve_c.cpp  lob_solver.cpp  ode.cpp  ode.hpp  solve_step.cpp  solve_step.hpp  tables.cpp  tables.hpp  version.hpp.in
test/: CMakeLists.txt
test/source/: boatright_test.cpp  calc_test.cpp  cartesian_test.cpp  eng_units_test.cpp  helpers_test.cpp  litz_test.cpp  lob_api_test.cpp  lob_builder_test.cpp  lob_coriolis_test.cpp  lob_cwaj_test.cpp  lob_env_test.cpp  lob_spin_drift_test.cpp  lob_spin_test.cpp  lob_test.cpp  lob_wind_test.cpp  ode_test.cpp  tables_test.cpp  test_helpers.hpp
